Fix: Align icons with text in Metadata Editor

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -775,3 +775,12 @@ div[data-role=controlgroup] a.ui-btn-active {
 .dashboardDocument .content-primary {
     padding-top: 4.25rem;
 }
+
+.editorNode {
+    display: flex;
+    align-items: center;
+}
+
+.metadataSidebarIcon {
+    color: #6c7bab;
+}
